tests/expectations/compiler/statements/assign_external_record_fail.out
<<<<<<< HEAD
Error [ETYC0372132]: Cannot assign to type `test0.aleo/R` or a member thereof.
=======
Error [ETYC0372136]: Cannot assign to the external record type `test0.aleo/R` in this location.
>>>>>>> mainnet
    --> compiler-test:12:13
     |
  12 |             r1 = test0.aleo/foo();
     |             ^^
     |
<<<<<<< HEAD
     = External record types and tuples containing them may not be assigned to.
Error [ETYC0372132]: Cannot assign to type `(test0.aleo/R, test0.aleo/R)` or a member thereof.
    --> compiler-test:20:13
=======
     = External record variables may not be assigned to in narrower conditonal scopes than they were defined.
Error [ETYC0372137]: Cannot assign to the tuple type `(test0.aleo/R, test0.aleo/R)` containing an external record in this location.
    --> compiler-test:21:13
>>>>>>> mainnet
     |
  21 |             tupl.0 = test0.aleo/foo();
     |             ^^^^
     |
<<<<<<< HEAD
     = External record types and tuples containing them may not be assigned to.
Error [ETYC0372132]: Cannot assign to type `test0.aleo/R` or a member thereof.
    --> compiler-test:20:18
=======
     = Tuples containing external records may not be assigned to in narrower conditonal scopes than they were defined.
Error [ETYC0372137]: Cannot assign to the tuple type `(test0.aleo/R, test0.aleo/R)` containing an external record in this location.
    --> compiler-test:25:13
>>>>>>> mainnet
     |
  25 |             tupl = (test0.aleo/foo(), test0.aleo/foo());
     |             ^^^^
     |
<<<<<<< HEAD
     = External record types and tuples containing them may not be assigned to.
Error [ETYC0372132]: Cannot assign to type `test0.aleo/R` or a member thereof.
    --> compiler-test:27:9
=======
     = Tuples containing external records may not be assigned to in narrower conditonal scopes than they were defined.
Error [ETYC0372135]: Cannot assign to a member of the external record `test0.aleo/R`.
    --> compiler-test:33:9
>>>>>>> mainnet
     |
  33 |         r.x = x;
     |         ^^^
